--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		</style>     
 	</head>
 	<body bgcolor="#ffe7ff">
-		<div align="center"><img src="img/02.webp" align="center" width="100%" height="150px">
+		<div align="center"><img src="/img/02.webp" align="center" width="100%" height="150px">
 		<div align="center">
 			<table border="0" width="100%" bgcolor="#009dff" align="center">
 				<tr>
