--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2020年7月9日，2020世界人工智能大会云端峰会在上海开幕，泠鸢yousa与微软小冰、小米小爱同学、百度小度演唱大会主题曲《智联家园》。
 				</td>
 				<td colspan="2">
-					<a href="img/02.jpg"><img src="img/02.jpg" width="300px"></a>
+					<a href="/img/02.jpg"><img src="/img/02.jpg" width="300px"></a>
 				</td>
 			</tr>
 			<tr>
