--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<!-- 背景图片跟随鼠标移动 -->
 		<style type="text/css">
 			#div1 {
-				background-image: url(img/pic1.png);
+				background-image: url(/img/pic1.png);
 				background-position: -100px -100px;
 				background-size: 110% 110%;
 				background-repeat: no-repeat;
@@ -20,7 +20,7 @@
 			<video src="video/kaichang.mp4" autoplay="autoplay" muted="muted"></video>
 		</div>
 		<div id="bg">
-			<img id="bgp" src="img/pomo.jpg" />
+			<img id="bgp" src="/img/pomo.jpg" />
 		</div>
 		<div id="div1">
 			<div id="div11"></div>
@@ -37,7 +37,7 @@
 		
 		<div id="div3">
 			<a id="a2" href="firstblog.html" title="第一篇博客">
-				<img id="pic" src="img/pic1.png"/>
+				<img id="pic" src="/img/pic1.png"/>
 			</a>
 		</div>
 		<div id="div4">
@@ -55,9 +55,9 @@
 					<h2>网页设计作品</h2>
 				</tr>
 				<tr>
-					<td><a id="a3" href="yousaindex.html" title="泠鸢yousaの主页" target="_blank"><img id="wangye" src="img/wangye1.png"></a></td>
-					<td><a id="a3" href="anbu.html" title="暗&emsp;部" target="_blank"><img id="wangye" src="img/wangye2.png"></a></td>
-					<td><a id="a3" href="login.html" title="登&emsp;录" target="_blank"><img id="wangye" src="img/wangye3.png"></a></td>
+					<td><a id="a3" href="yousaindex.html" title="泠鸢yousaの主页" target="_blank"><img id="wangye" src="/img/wangye1.png"></a></td>
+					<td><a id="a3" href="anbu.html" title="暗&emsp;部" target="_blank"><img id="wangye" src="/img/wangye2.png"></a></td>
+					<td><a id="a3" href="login.html" title="登&emsp;录" target="_blank"><img id="wangye" src="/img/wangye3.png"></a></td>
 				</tr>
 				<tr>
 					<td><a id="a3" href="yousaindex.html" title="泠鸢yousaの主页" target="_blank"><h3>泠鸢yousaの主页</h3></a></td>
