--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>moran的博客</title>
-		<script src="js/jquery-3.5.1.min.js"></script>
+		<script src="/js/jquery-3.5.1.min.js"></script>
 		<!-- 背景图片跟随鼠标移动 -->
 		<style type="text/css">
 			#div1 {
@@ -12,8 +12,8 @@
 				background-repeat: no-repeat;
 			}
 		</style>
-		<link rel="stylesheet" href="css/index.css"/>
-		<script src="js/index.js"></script>
+		<link rel="stylesheet" href="/css/index.css"/>
+		<script src="/js/index.js"></script>
 	</head>
 	<body>
 		<div id="spinner">
