--- a/firstblog.html
+++ b/firstblog.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>第一篇博客</title>
-		<link rel="stylesheet" href="css/firstblog.css"/>
+		<link rel="stylesheet" href="/css/firstblog.css"/>
 	</head>
 	<body>
 		<div>
-			<a href="index.html" title="首页"><img src="img/home.png"></a>	
+			<a href="index.html" title="首页"><img src="/img/home.png"></a>	
 		</div>
 		<div id="html">
 			<h1>第一篇博客</h1><br>
