--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div id="spinner">
-			<video src="video/kaichang.mp4" autoplay="autoplay" muted="muted"></video>
+			<video src="/video/kaichang.mp4" autoplay="autoplay" muted="muted"></video>
 		</div>
 		<div id="bg">
 			<img id="bgp" src="/img/pomo.jpg" />
