--- a/GROUP.html
+++ b/GROUP.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8">
 		<title>GROUP</title>
 		<!-- 1.在导入bootstrap之前，导入JQuery框架文件 -->
-		<script src="js/jquery-3.5.1.min.js"></script>
+		<script src="/js/jquery-3.5.1.min.js"></script>
 		<!-- 2.导入bootstrap中的核心CSS文件 -->
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<link rel="stylesheet" href="/css/bootstrap.min.css" />
 		<!-- 3.导入bootstrap中的核心js文件 -->
 		<script src="./js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="css/anbuindex.css" />
+		<link rel="stylesheet" href="/css/anbuindex.css" />
 	</head>
 	<body>
 		<div id="biaotou"></div>
@@ -69,7 +69,7 @@
 					</p>
 				</div>
 				<div class="col-md-6 column">
-					<a href="img/group1.png"><img alt="140x140" src="img/group1.png" id="pic01" /></a>
+					<a href="/img/group1.png"><img alt="140x140" src="/img/group1.png" id="pic01" /></a>
 				</div>
 			</div>
 		</div><br>
@@ -105,7 +105,7 @@
 					</p>
 				</div>
 				<div class="col-md-6 column">
-					<a href="img/anbu3.jpg"><img alt="140x140" src="./img/anbu3.jpg" id="pic02" /></a>
+					<a href="/img/anbu3.jpg"><img alt="140x140" src="/img/anbu3.jpg" id="pic02" /></a>
 				</div>
 			</div>
 		</div><br>
@@ -124,12 +124,12 @@
 							</p>
 						</div>
 						<div class="col-md-4 column">
-							<a href="img/yifang.jpg"><img alt="140x140" src="img/yifang.jpg" id="pic03"/></a>
+							<a href="/img/yifang.jpg"><img alt="140x140" src="/img/yifang.jpg" id="pic03"/></a>
 						</div>
 					</div>
 					<div class="row clearfix">
 						<div class="col-md-4 column">
-							<a href="img/jiebiao.png"><img alt="140x140" src="img/jiebiao.png" id="pic04"/></a>
+							<a href="/img/jiebiao.png"><img alt="140x140" src="/img/jiebiao.png" id="pic04"/></a>
 						</div>
 						<div class="col-md-8 column">
 							<h2>
@@ -151,12 +151,12 @@
 							</p>
 						</div>
 						<div class="col-md-4 column">
-							<a href="img/haiyuan.png"><img alt="140x140" src="img/haiyuan.png"  id="pic03"/></a>
+							<a href="/img/haiyuan.png"><img alt="140x140" src="/img/haiyuan.png"  id="pic03"/></a>
 						</div>
 					</div>
 					<div class="row clearfix">
 						<div class="col-md-4 column">
-							<a href="img/tuyumen.jpg"><img alt="140x140" src="img/tuyumen.jpg"  id="pic04"/></a>
+							<a href="/img/tuyumen.jpg"><img alt="140x140" src="/img/tuyumen.jpg"  id="pic04"/></a>
 						</div>
 						<div class="col-md-8 column">
 							<h2>
