--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<div id="div4">
 			<p id="p2">一月&nbsp;02,2021</p>
 			<div>
-				<a id="a2" href="firstblog.html" title="第一篇博客">第一篇博客</a>
+				<a id="a2" href="/firstblog.html" title="第一篇博客">第一篇博客</a>
 			</div><br>
 			<p id="p2">
 				你好，陌生人&emsp;&emsp;哈喽，这里是moran的博客，基于HBuilderX搭建，...
