--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div>
-			<img id="biaotou" src="img/01biaotou.webp">
+			<img id="biaotou" src="/img/01biaotou.webp">
 		</div>
 		<div class="container" id="ul1">
 			<ul class="nav nav-pills">
@@ -57,7 +57,7 @@
 							</table>
 						</div>
 						<div class="col-md-4 column">
-							<img alt="140x140" src="img/011.jpg" class="img-thumbnail" />
+							<img alt="140x140" src="/img/011.jpg" class="img-thumbnail" />
 						</div>
 					</div>
 				</div>
@@ -79,7 +79,7 @@
 					</p>
 				</div>
 				<div>
-					<img alt="140x140" id="pic1" src="img/012.jpg" class="img-thumbnail" />
+					<img alt="140x140" id="pic1" src="/img/012.jpg" class="img-thumbnail" />
 				</div>
 			</div>
 		</div><br />
@@ -279,7 +279,7 @@
 											</tr>
 										</tbody>
 									</table>
-									<img src="img/qianse.jpg" id="pic2" />
+									<img src="/img/qianse.jpg" id="pic2" />
 								</div>
 							</div>
 							<div class="tab-pane" id="panel-245983">
@@ -335,7 +335,7 @@
 											</tr>
 										</tbody>
 									</table>
-									<img src="img/zhezhi.jpg" id="pic2" />
+									<img src="/img/zhezhi.jpg" id="pic2" />
 								</div>
 							</div>
 						</div>
