--- a/ITEM.html
+++ b/ITEM.html
@@ -66,7 +66,7 @@
 					</p>
 				</div>
 				<div class="col-md-6 column">
-					<a href="img/item1.jpg"><img alt="140x140" src="img/item1.jpg" id="pic01" /></a>
+					<a href="img/item1.jpg"><img alt="140x140" src="/img/item1.jpg" id="pic01" /></a>
 				</div>
 			</div>
 		</div><br>
@@ -93,7 +93,7 @@
 					</p>
 				</div>
 				<div class="col-md-6 column">
-					<a href="img/anbu2.jpg"><img alt="140x140" src="./img/anbu2.jpg" id="pic02" /></a>
+					<a href="img/anbu2.jpg"><img alt="140x140" src="/img/anbu2.jpg" id="pic02" /></a>
 				</div>
 			</div>
 		</div><br>
@@ -112,12 +112,12 @@
 							</p>
 						</div>
 						<div class="col-md-4 column">
-							<a href="img/maiye.png"><img alt="140x140" src="img/maiye.png" id="pic03"/></a>
+							<a href="img/maiye.png"><img alt="140x140" src="/img/maiye.png" id="pic03"/></a>
 						</div>
 					</div>
 					<div class="row clearfix">
 						<div class="col-md-4 column">
-							<a href="img/fulan.png"><img alt="140x140" src="img/fulan.png"  id="pic04"/></a>
+							<a href="img/fulan.png"><img alt="140x140" src="/img/fulan.png"  id="pic04"/></a>
 						</div>
 						<div class="col-md-8 column">
 							<h2>
