--- a/SCHOOL.html
+++ b/SCHOOL.html
@@ -65,7 +65,7 @@
 						</p>
 				</div>
 				<div class="col-md-6 column">
-					<a href="img/school1.png"><img alt="140x140" src="img/school1.png" id="pic01" /></a>
+					<a href="img/school1.png"><img alt="140x140" src="/img/school1.png" id="pic01" /></a>
 				</div>
 			</div>
 		</div><br>
@@ -85,7 +85,7 @@
 					</p>
 				</div>
 				<div class="col-md-6 column">
-					<a href="img/school2.png"><img alt="140x140" src="./img/school2.png" id="pic02" /></a>
+					<a href="img/school2.png"><img alt="140x140" src="/img/school2.png" id="pic02" /></a>
 				</div>
 			</div>
 		</div><br>
@@ -104,12 +104,12 @@
 							</p>
 						</div>
 						<div class="col-md-4 column">
-							<a href="img/weiyuan.png"><img alt="140x140" src="img/weiyuan.png" id="pic03" /></a>
+							<a href="img/weiyuan.png"><img alt="140x140" src="/img/weiyuan.png" id="pic03" /></a>
 						</div>
 					</div>
 					<div class="row clearfix">
 						<div class="col-md-4 column">
-							<a href="img/yucai.png"><img alt="140x140" src="img/yucai.png" id="pic04" /></a>
+							<a href="img/yucai.png"><img alt="140x140" src="/img/yucai.png" id="pic04" /></a>
 						</div>
 						<div class="col-md-8 column">
 							
@@ -131,12 +131,12 @@
 							</p>
 						</div>
 						<div class="col-md-4 column">
-							<a href="img/wanhua.png"><img alt="140x140" src="img/wanhua.png" id="pic03" /></a>
+							<a href="img/wanhua.png"><img alt="140x140" src="/img/wanhua.png" id="pic03" /></a>
 						</div>
 					</div>
 					<div class="row clearfix">
 						<div class="col-md-4 column">
-							<a href="img/gongjian.jpg"><img alt="140x140" src="img/gongjian.jpg" id="pic04" /></a>
+							<a href="img/gongjian.jpg"><img alt="140x140" src="/img/gongjian.jpg" id="pic04" /></a>
 						</div>
 						<div class="col-md-8 column">
 							<h2>
