--- a/anbu.html
+++ b/anbu.html
@@ -66,7 +66,7 @@
 					</p>
 				</div>
 				<div class="col-md-6 column">
-					<a href="img/01.png"><img alt="140x140" src="img/01.png" id="pic01" /></a>
+					<a href="img/01.png"><img alt="140x140" src="/img/01.png" id="pic01" /></a>
 				</div>
 			</div>
 		</div><br>
@@ -90,7 +90,7 @@
 					</p>
 				</div>
 				<div class="col-md-6 column">
-					<a href="img/anbu3.jpg"><img alt="140x140" src="./img/anbu3.jpg" id="pic02" /></a>
+					<a href="img/anbu3.jpg"><img alt="140x140" src="/img/anbu3.jpg" id="pic02" /></a>
 				</div>
 			</div>
 		</div><br>
@@ -109,12 +109,12 @@
 							</p>
 						</div>
 						<div class="col-md-4 column">
-							<a href="GROUP.html"><img alt="140x140" src="img/group1.png" id="pic03"/></a>
+							<a href="GROUP.html"><img alt="140x140" src="/img/group1.png" id="pic03"/></a>
 						</div>
 					</div>
 					<div class="row clearfix">
 						<div class="col-md-4 column">
-							<a href="ITEM.html"><img alt="140x140" src="img/item1.jpg"  id="pic04"/></a>
+							<a href="ITEM.html"><img alt="140x140" src="/img/item1.jpg"  id="pic04"/></a>
 						</div>
 						<div class="col-md-8 column">
 							<h2>
@@ -135,7 +135,7 @@
 							</p>
 						</div>
 						<div class="col-md-4 column">
-							<a href="SCHOOL.html"><img alt="140x140" src="img/school1.png"  id="pic03"/></a>
+							<a href="SCHOOL.html"><img alt="140x140" src="/img/school1.png"  id="pic03"/></a>
 						</div>
 					</div>
 				</div>
