--- a/yousajieshao.html
+++ b/yousajieshao.html
@@ -13,10 +13,10 @@
 	</head>
 	<body>
 		<div>
-			<img id="biaotou" src="img/01biaotou.webp">
+			<img id="biaotou" src="/img/01biaotou.webp">
 		</div>
 		<div id="bg">
-			<img id="bgp" src="img/022.png" />
+			<img id="bgp" src="/img/022.png" />
 		</div>
 		<div class="container" id="ul1">
 			<ul class="nav nav-pills">
@@ -42,7 +42,7 @@
 					<p>2019年3月9日，首次使用虚拟形象直播；</p>
 				</div>
 				<div class="col-md-4 column">
-					<img alt="140x140" src="img/021.jpg" class="img-thumbnail" id="pic1" />
+					<img alt="140x140" src="/img/021.jpg" class="img-thumbnail" id="pic1" />
 				</div>
 			</div>
 			<div class="row clearfix">
@@ -305,11 +305,11 @@
 							<div>
 								<table>
 									<tr>
-										<td><a href="img/yousa01.png"><img src="img/yousa01.png" id="pic4" class="img-thumbnail"></a></td>
-										<td><a href="img/yousa02.png"><img src="img/yousa02.png" id="pic4" class="img-thumbnail"></a></td>
-										<td><a href="img/yousa03.png"><img src="img/yousa03.png" id="pic4" class="img-thumbnail"></a></td>
-										<td><a href="img/yousa04.png"><img src="img/yousa04.png" id="pic4" class="img-thumbnail"></a></td>
-										<td><a href="img/yousa05.png"><img src="img/yousa05.png" id="pic4" class="img-thumbnail"></a></td>
+										<td><a href="img/yousa01.png"><img src="/img/yousa01.png" id="pic4" class="img-thumbnail"></a></td>
+										<td><a href="img/yousa02.png"><img src="/img/yousa02.png" id="pic4" class="img-thumbnail"></a></td>
+										<td><a href="img/yousa03.png"><img src="/img/yousa03.png" id="pic4" class="img-thumbnail"></a></td>
+										<td><a href="img/yousa04.png"><img src="/img/yousa04.png" id="pic4" class="img-thumbnail"></a></td>
+										<td><a href="img/yousa05.png"><img src="/img/yousa05.png" id="pic4" class="img-thumbnail"></a></td>
 									</tr>
 									<tr>
 										<td><a href="https://www.bilibili.com/video/av45793347" target="_blank">石英式泠鸢</a></td>
