--- a/yousajieshao.html
+++ b/yousajieshao.html
@@ -76,7 +76,7 @@
 						<li>5月23日，在B站上线了泠鸢yousa个性装扮。四个小时粉丝套装（指粉丝编号）销量破万，鸟蛋们从此可以用鸟的虚拟形象装饰自己的B站啦！</li>
 						<li>5月23日晚，在B站593直播间举办生日会，因为生日5月19日当天不是周六，并未开播。此次直播第二次采用了3D动态捕捉技术，有精心设计的舞台背景，让yousa可以边唱边跳。</li>
 						<li>7月9日，与微软小冰、小米小爱同学、百度小度在于上海举办的2020世界人工智能大会云端峰会上演唱大会主题曲
-							《智联家园》。</li>
+							<a href="https://www.bilibili.com/video/BV15v411z78m" target="_blank">《智联家园》</a>。</li>
 						<li>7月25日晚，在2020BML的舞台上与祈Inory、小缘、hanser合唱
 							<a href="https://www.bilibili.com/video/BV1LK4y1x76B" target="_blank">《secret base》</a>。这是泠鸢yousa第一次以虚拟形象和真人同台演出，并引发大量“爷青回”和“泪目”等弹幕。</li>
 						<li>8月7日下午，在2020BW用虚拟形象与粉丝互动签售。</li>
